--- a/shop.html
+++ b/shop.html
@@ -138,6 +138,7 @@
 
     <!-- file js  -->
     <script src="java script/shop.js" ></script>
+    <script src="java script/control.js" ></script>
 </body>
 
 </html>
